k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: devops-project-1
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
